# hisense-w41h1

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  UPSTREAM.md  ruff.toml  versions.env
.gitea/workflows/: build.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: assemble_docs_site.py  indexnow_ping.py
.github/workflows/: amebaz2-release.yaml  esp32-release.yaml  pages.yaml  qa.yaml
docs-site/: _config.yml  compatibility.md  index.md
docs-site/_includes/: head_custom.html  nav_footer_custom.html
docs-site/firmware/: index.md
docs-site/guide/: index.md
docs-site/internals/: index.md
docs/guide/: Commissioning-and-HA-Setup.md  ESP32-Replacement-Build.md  Everyday-Control.md  FAQ-Gotchas.md  Hardware-and-Wiring.md  Home.md  Installing-Custom-Firmware.md  OTA-Updates.md  Protocol-Overview.md  Recovery-and-Reflash.md  Repo-Map-and-Build-Pipeline.md  Testing-and-QA.md  _README.md  _Sidebar.md  lint.py
dumps/: README.md
firmware/: README.md  setup.sh
firmware/.githooks/: pre-commit  prepare-commit-msg
firmware/docs/: 01-expose-all-clusters.md  02-fix-attestation.md  04-qa-strategy.md  05-ha-control-and-native-ui.md  07-stock-parity-gaps.md  09-energy-monitoring.md  10-firmware-ota-procedure.md  12-ota-convert-stock-unit.md  13-path-comparison.md  14-diagnostics-ha-exposure.md
firmware/esp32-matter/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.debug  sdkconfig.defaults
firmware/esp32-matter/components/hisense_rs485/: CMakeLists.txt
firmware/esp32-matter/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  diag_console.cpp  diag_console.h
firmware/esp32-recon/: .gitignore  CMakeLists.txt  HIL-RUNBOOK.md  README.md  sdkconfig.defaults
firmware/flasher/: ch341_readverify.py  ch341_setqe.py  ch341_sr.py  ch341common.py  ch341dump.py  ch341flash-full.py  ch341flash.py
firmware/scripts/: drive9.py  drive_ac.py  esp32-lint.sh  esp32-release.sh  gen-creds.sh  matter_scan.py  mcli.py  mnodes.py  ms_ws.py  ota-release.env.example  ota-release.sh  (+6 more)
patches/: ameba-rtos-z2.patch  connectedhomeip.patch
reverse-engineering/: README.md
scripts/: apply-matter-edits.sh  setup.sh
(+74 files in other folders)
